added vision intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,11 @@ const allAuthors = [
   <div class="index">
     <h1 class="site-title">REQUESTS FOR DISCUSSION</h1>
     <p class="subtitle">On AI infrastructure security and AI verification.</p>
+    <div class="intro">
+      <p>In the late 1950s negotiations for a comprehensive nuclear test ban started. Until the late 70s a full nuclear test ban treaty was blocked because neither the U.S. nor the USSR could reliably detect small underground tests. Without credible verification, both sides feared the other could cheat undetected. Only in the 90s was the political climate and verification technology mature enough for a full test ban. That technical gap led to decades of extra nuclear testing. Each new test deepened mistrust, justified larger arsenals, and made future agreements politically radioactive. The lack of verification technology didn't just delay one treaty; it entrenched a destabilising arms race that might have been avoided.</p>
+      <p>We may be heading toward a similar inflexion point with AI.  An international agreement between AI superpowers requires trust in each other's AI development and deployment practices. Trust enabling technologies remain unrealised. Nobody knows when this would be needed for AI. However, the lead times for developing, deploying and de-risking verification systems could be long. That means international coordination on AI could be blocked by this technology not being mature unless we start building it now. </p>
+      <p>There is a unique opportunity for hardware founders: build the verification infrastructure now to lower the bar for the world to coordinate on the most important technology of our time.</p>
+    </div>
 
     <div class="search-container">
       <input
@@ -190,6 +195,11 @@ const allAuthors = [
     font-family: "IBM Plex Mono", monospace;
     font-size: 14px;
     text-align: center;
+  }
+
+  .intro {
+    font-size: 12px;
+    margin-bottom: 2rem;
   }
 
   .search-container {
